# libppm

./: .gitignore  Cargo.toml  README.md  build.rs  gray.ppm  reverted.ppm  runner.py
src/: lib.rs  ppma_io.c  ppma_io.sh
